--- a/webapp/style/style.css
+++ b/webapp/style/style.css
@@ -18,7 +18,7 @@ body{
 }
 
 #menu{
-	background-color: rgba(128,128,128,0.5);
+	background-color: rgba(128,128,128,0.6);
 	border-radius: 25px;
 	float: left;
 	width: 15%;
@@ -30,7 +30,7 @@ body{
 }
 
 #content{
-	background-color: rgba(128,128,128,0.5);
+	background-color: rgba(128,128,128,0.6);
 	border-radius: 20px;
 	width: 70%;
 	float: right;
@@ -105,14 +105,40 @@ footer{
 }
 
 .menuItem:hover {
-	background-color: rgba(150,150,150,0.7);
+	background-color: rgba(150,150,150,0.9);
 }
 
 .box {
-	background-color: rgba(250,250,250,0.5);
+	background-color: rgba(175,175,175,0.8);
 	border-radius: 10px;
 	padding:10px;
+	margin:8px;
+}
+
+.image-container {
+	background-color: rgba(125,125,125,0.5);
+	border-radius: 10px;
+	padding:5px;
+	margin:8px;
+	clear:left;
+	width: 90%;
+	overflow:auto;
+}
+
+.image-box {
+	
+	border-radius: 10px;
+	padding:5px;
 	margin:5px;
+	float:left;
+}
+
+.author {
+	
+	border-radius: 10px;
+	padding:5px;
+	margin:5px;
+	float:left;
 }
 
 .inbox {
